// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Account /> should render correctly - index 1`] = `
<div>
  <div
    aria-label="Loading"
    class="sc-bczRLJ gOFXdZ page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <div
      class="sc-hAZoDl gYvKRI"
    >
      <div
        class="sc-fnykZs hjiMPF"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-hAZoDl lnuFcM"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-fnykZs hjiMPF"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-hAZoDl lnuFcM"
    >
      <div
        class="sc-fnykZs hjiMPF"
        style="margin-left: -0px;"
      />
    </div>
  </div>
</div>
`;

exports[`<Account /> should render correctly with initial state 1`] = `
<div>
  <div
    class="sc-bczRLJ ikoAiL page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <h1
      class="sc-gsnTZi hUDWSp sc-kDDrLX cCIGfN"
    >
      Account
    </h1>
    <div
      class="accountstyles__ControlPanel-sc-b7dzct-2 irDDWO"
    >
      <button
        class="sc-idiyUo sooGH accountstyles__StyledButton-sc-b7dzct-1 lenMsB"
        type="button"
      >
        <span
          class="sc-hHLeRK eOuDcm"
        >
          Get a new verification email
        </span>
      </button>
      <button
        class="sc-idiyUo ktTfvG outer"
        type="button"
      >
        <span
          class="sc-hHLeRK eOuDcm"
        >
          Logout
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`<Account /> should render correctly with initial state 2`] = `
<div>
  <div
    class="sc-bczRLJ ikoAiL page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <h1
      class="sc-gsnTZi hUDWSp sc-kDDrLX cCIGfN"
    >
      Account
    </h1>
    <div
      class="accountstyles__ControlPanel-sc-b7dzct-2 irDDWO"
    >
      <button
        class="sc-idiyUo sooGH accountstyles__StyledButton-sc-b7dzct-1 lenMsB"
        type="button"
      >
        <span
          class="sc-hHLeRK eOuDcm"
        >
          Get a new verification email
        </span>
      </button>
      <button
        class="sc-idiyUo ktTfvG outer"
        type="button"
      >
        <span
          class="sc-hHLeRK eOuDcm"
        >
          Logout
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`<Account /> should render correctly with logOutError 1`] = `
<div>
  <div
    class="sc-bczRLJ ikoAiL page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <h1
      class="sc-gsnTZi hUDWSp sc-kDDrLX cCIGfN"
    >
      Account
    </h1>
    <div
      class="accountstyles__ControlPanel-sc-b7dzct-2 irDDWO"
    >
      <button
        class="sc-idiyUo sooGH accountstyles__StyledButton-sc-b7dzct-1 lenMsB"
        type="button"
      >
        <span
          class="sc-hHLeRK eOuDcm"
        >
          Get a new verification email
        </span>
      </button>
      <button
        class="sc-idiyUo ktTfvG outer"
        type="button"
      >
        <span
          class="sc-hHLeRK eOuDcm"
        >
          Logout
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`<Account /> should render correctly with logOutResult 1`] = `
<div>
  <div
    class="sc-bczRLJ ikoAiL page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <h1
      class="sc-gsnTZi hUDWSp sc-kDDrLX cCIGfN"
    >
      Account
    </h1>
    <div
      class="accountstyles__ControlPanel-sc-b7dzct-2 irDDWO"
    >
      <button
        class="sc-idiyUo sooGH accountstyles__StyledButton-sc-b7dzct-1 lenMsB"
        type="button"
      >
        <span
          class="sc-hHLeRK eOuDcm"
        >
          Get a new verification email
        </span>
      </button>
      <button
        class="sc-idiyUo ktTfvG outer"
        type="button"
      >
        <span
          class="sc-hHLeRK eOuDcm"
        >
          Logout
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`<Account /> should render correctly with loggingOut=true 1`] = `
<div>
  <div
    class="sc-bczRLJ ikoAiL page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <h1
      class="sc-gsnTZi hUDWSp sc-kDDrLX cCIGfN"
    >
      Account
    </h1>
    <div
      class="accountstyles__ControlPanel-sc-b7dzct-2 irDDWO"
    >
      <button
        class="sc-idiyUo sooGH accountstyles__StyledButton-sc-b7dzct-1 lenMsB"
        type="button"
      >
        <span
          class="sc-hHLeRK eOuDcm"
        >
          Get a new verification email
        </span>
      </button>
      <button
        class="sc-idiyUo gBoQVO outer"
        disabled=""
        type="button"
      >
        <span
          class="sc-hHLeRK la-DPV"
        >
          Logout
        </span>
        <div
          aria-hidden="true"
          class="sc-dmRaPn etefHp"
        >
          <div
            class="sc-fEOsli eGfMJp"
          >
            <div
              class="sc-bjUoiL dChIjH"
            />
            <div
              class="sc-bjUoiL jtDPGv"
            />
            <div
              class="sc-bjUoiL csSmvg"
            />
            <div
              class="sc-bjUoiL fQKStd"
            />
            <div
              class="sc-bjUoiL eZeiia"
            />
            <div
              class="sc-bjUoiL hgvuZX"
            />
            <div
              class="sc-bjUoiL eBAgKT"
            />
            <div
              class="sc-bjUoiL bkrIvf"
            />
          </div>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`<Account /> should render correctly with no user 1`] = `
<div>
  <div
    aria-label="Loading"
    class="sc-bczRLJ gOFXdZ page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <div
      class="sc-hAZoDl gYvKRI"
    >
      <div
        class="sc-fnykZs hjiMPF"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-hAZoDl lnuFcM"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-fnykZs hjiMPF"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-hAZoDl lnuFcM"
    >
      <div
        class="sc-fnykZs hjiMPF"
        style="margin-left: -0px;"
      />
    </div>
  </div>
</div>
`;

exports[`<Account /> should render correctly with requestVerificationEmailError 1`] = `
<div>
  <div
    class="sc-bczRLJ ikoAiL page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <h1
      class="sc-gsnTZi hUDWSp sc-kDDrLX cCIGfN"
    >
      Account
    </h1>
    <div
      class="accountstyles__ControlPanel-sc-b7dzct-2 irDDWO"
    >
      <button
        class="sc-idiyUo sooGH accountstyles__StyledButton-sc-b7dzct-1 lenMsB"
        type="button"
      >
        <span
          class="sc-hHLeRK eOuDcm"
        >
          Get a new verification email
        </span>
      </button>
      <button
        class="sc-idiyUo ktTfvG outer"
        type="button"
      >
        <span
          class="sc-hHLeRK eOuDcm"
        >
          Logout
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`<Account /> should render correctly with requestVerificationEmailResult 1`] = `
<div>
  <div
    class="sc-bczRLJ ikoAiL page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <h1
      class="sc-gsnTZi hUDWSp sc-kDDrLX cCIGfN"
    >
      Account
    </h1>
    <div
      class="accountstyles__ControlPanel-sc-b7dzct-2 irDDWO"
    >
      <button
        class="sc-idiyUo sooGH accountstyles__StyledButton-sc-b7dzct-1 lenMsB"
        type="button"
      >
        <span
          class="sc-hHLeRK eOuDcm"
        >
          Get a new verification email
        </span>
      </button>
      <button
        class="sc-idiyUo ktTfvG outer"
        type="button"
      >
        <span
          class="sc-hHLeRK eOuDcm"
        >
          Logout
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`<Account /> should render correctly with requestingVerificationEmail=true 1`] = `
<div>
  <div
    class="sc-bczRLJ ikoAiL page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <h1
      class="sc-gsnTZi hUDWSp sc-kDDrLX cCIGfN"
    >
      Account
    </h1>
    <div
      class="accountstyles__ControlPanel-sc-b7dzct-2 irDDWO"
    >
      <button
        class="sc-idiyUo fWHeaH accountstyles__StyledButton-sc-b7dzct-1 lenMsB"
        disabled=""
        type="button"
      >
        <span
          class="sc-hHLeRK la-DPV"
        >
          Get a new verification email
        </span>
        <div
          aria-hidden="true"
          class="sc-dmRaPn etefHp"
        >
          <div
            class="sc-fEOsli eGfMJp"
          >
            <div
              class="sc-bjUoiL dChIjH"
            />
            <div
              class="sc-bjUoiL jtDPGv"
            />
            <div
              class="sc-bjUoiL csSmvg"
            />
            <div
              class="sc-bjUoiL fQKStd"
            />
            <div
              class="sc-bjUoiL eZeiia"
            />
            <div
              class="sc-bjUoiL hgvuZX"
            />
            <div
              class="sc-bjUoiL eBAgKT"
            />
            <div
              class="sc-bjUoiL bkrIvf"
            />
          </div>
        </div>
      </button>
      <button
        class="sc-idiyUo ktTfvG outer"
        type="button"
      >
        <span
          class="sc-hHLeRK eOuDcm"
        >
          Logout
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`<Account /> should render correctly with user with emailVerified=true 1`] = `
<div>
  <div
    class="sc-bczRLJ ikoAiL page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <h1
      class="sc-gsnTZi hUDWSp sc-kDDrLX cCIGfN"
    >
      Account
    </h1>
    <div
      class="accountstyles__ControlPanel-sc-b7dzct-2 irDDWO"
    >
      <button
        class="sc-idiyUo ktTfvG outer"
        type="button"
      >
        <span
          class="sc-hHLeRK eOuDcm"
        >
          Logout
        </span>
      </button>
    </div>
  </div>
</div>
`;
